--- a/src/scss/light-slider.scss
+++ b/src/scss/light-slider.scss
@@ -1,9 +1,9 @@
-$root-element: 'awssld';
+$root-element: "awssld";
 $cos45: 0.7071;
 $transition-bezier: cubic-bezier(0.5, 0.075, 0.25, 0.95);
 $slider-height-percentage: 60%;
 $slider-transition-duration: 575ms;
-$organic-arrow-color: #D7CAAA;
+$organic-arrow-color: #bfcdd9;
 $organic-arrow-thickness: 4px;
 $organic-arrow-height: 40px;
 $organic-arrow-border-radius: 0;
@@ -12,11 +12,11 @@ $control-button-height: 25%;
 $control-button-opacity: 0.5;
 $control-button-hover-opacity: 0.75;
 $control-button-background: transparent;
-$loader-bar-color:#BFAA76;
+$loader-bar-color: #bfcdd9;
 $loader-bar-height: 6px;
-$control-bullet-color: #D7CAAA;
-$control-bullet-active-color: #D7CAAA;
-$content-background-color: #D7CAAA;
+$control-bullet-color: #bfcdd9;
+$control-bullet-active-color: #bfcdd9;
+$content-background-color: #bfcdd9;
 
 %fill-parent {
   display: block;
@@ -40,7 +40,7 @@ $content-background-color: #D7CAAA;
 
 %clear-selection {
   user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: #bfcdd9;
   -webkit-tap-highlight-color: transparent;
 }
 
@@ -92,7 +92,7 @@ $content-background-color: #D7CAAA;
     }
   }
   &__startUp {
-    background-color: red;
+    background-color: #bfcdd9;
     height: 100%;
     width: 100%;
 
@@ -305,7 +305,7 @@ $content-background-color: #D7CAAA;
     transition: transform 0.2s ease-out 0.125s, opacity 0.2s ease-out;
     &:before,
     &:after {
-      content: ' ';
+      content: " ";
       position: absolute;
       right: calc(
         50% -
